	  version part (mmiUri.getVersion()) is ignored.
	  
	- Issue 23: Resolve latest version
	  See UriResolver._resolveUri:
	  	If version is not explicitly requested, find the latest version of the
	  	corresponding ontology (using "%" for version wildcard and the other components
	  	in the URI), and continue regular processing with the URI found.
	  	Note: topic extension is handled with a trailing "%" wildcard as well.
	  	
	  
	- Convenience parameter "_versions" to report the versions of a requested mmiUri, ex:
	    http://mmisw.org/ont/mmi/parameter/?_versions
	
	
2008-10-30
	 - Issue 14: "mysql db connection timeout error"
	   http://code.google.com/p/mmisw/issues/detail?id=14
	   
	   Db.java: move DataSource lookup to the init() method.
	   Ref: http://www.ibm.com/developerworks/websphere/library/bestpractices/using_httpservlet_method.html
	   TODO: still need to see if this helps solve the issue.
	   
	   Also, closing all connections after they are used.
	   
	 - Not resolving request with extension (eg., .../topic.html) when the original URI
	   in the db is with no extension (eg, .../topic). -- Fixed.
	   
	 - Now using pattern: ^yyyy[mm[dd][Thh[mm[ss]]]$ to validate a non-null version string
	   in the ontology URI.
	   
	 
2008-10-29
	- show requested URI, remote host, and user-agent 
	- return no-content to googlebot
	
	
2008-10-24
	build.xml: added "voc-jar" target to create org.mmisw.ont.vocabulary.jar to facilitate
	the current updates in the voc2rdf project.
	(note: these vocabularies could be located in an independed project).
	
2008-10-23
	Paul:  Carlos, got an update: we're now using your table formatting, including CSS, on the
	metadata table when we show ontologies. If you could change your output again (sorry) to 
	only put out the contents of the table (starting with <tr> instead of <table>) then I 
	think it will become seamless.
	
	--> done.
	

2008-10-22
	- HTML output improved a bit. New class HtmlDispatcher.