@@ -13,7 +13,9 @@ ChangeLog
 	  	If version is not explicitly requested, find the latest version of the
 	  	corresponding ontology (using "%" for version wildcard and the other components
 	  	in the URI), and continue regular processing with the URI found.
-	  	Note: topic extension is handled with a trailing "%" wildcard as well.
+	  	Note: topic extension is handled with a trailing ".%" to the base topic without
+	  	extension. Note: the dot is important to avoid getting topics that have the topic 
+	  	in question as suffix.
 	  	
 	  
 	- Convenience parameter "_versions" to report the versions of a requested mmiUri, ex:
